[project]
name = "testenlaps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asgi-lifespan>=2.1.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.11",
    "flake8>=7.1.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "invoke>=2.2.0",
    "mypy>=1.15.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.1.0",
    "safety>=3.2.9",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[asyncio,mypy]>=2.0.39",
    "uvicorn>=0.34.0",
]
